--- a/lxw_Helper.exe.config
+++ b/lxw_Helper.exe.config
@@ -7,9 +7,9 @@
 
     <!--Oracle配置-->
     <add key="IP" value="127.0.0.1" />
-    <add key="Port" value="1521" />
+    <add key="Port" value="2001" />
     <add key="Name" value="lxw" />
-    <add key="Pwd" value="123456" />
+    <add key="Pwd" value="lxw" />
     <add key="Instance" value="orcl" />
 
     <!--MySQL配置-->
@@ -17,17 +17,17 @@
     <add key="Port_MySql" value="3306" />
     <add key="Name_MySql" value="root" />
     <add key="Pwd_MySql" value="123456" />
-    <add key="DB_MySql" value="sys" />
+    <add key="DB_MySql" value="mysql" />
 
     <!--公共配置-->
     <add key="package" value="com.lw.lw_main"/>
     <add key="author" value="lxw"/>
     <add key="propath" value="E:\Demo"/>
+    <add key="webpath" value="E:\Demo"/>
 
   </appSettings>
   <connectionStrings>
-    <!--MySQL配置   MySql_DB不要修改-->
-    <add name="MySql_DB" connectionString=""
-            providerName="MySql.Data.MySqlClient"/>
+    <add name="MySql_DB" connectionString="server=127.0.0.1;database=mysql;User Id=root;Password=123456;Port=3306;Persist Security Info=True;"
+      providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
