--- a/CustomTemplates/MySQL/src/main/resources/application.properties
+++ b/CustomTemplates/MySQL/src/main/resources/application.properties
@@ -32,6 +32,10 @@ mybatis.typeAliasesPackage=${PackageName}.pojo
 
 #logging.config=classpath:logback-spring-dev.xml
 
+#logging.path=/home/logs/
+#logging.file=/home/logs/${ArtifactId}.log
+#logging.file.max-history=30
+
 #分页插件
 pagehelper:
 helperDialect: mysql
